crates/changeset/tests/snapshots/atomic_rewrite_goldens__delete.snap
---
source: crates/changeset/tests/atomic_rewrite_goldens.rs
expression: shape(&edits)
---
delete Sign
