crates/changeset/tests/snapshots/atomic_rewrite_goldens__derive_sense.snap
---
source: crates/changeset/tests/atomic_rewrite_goldens.rs
expression: shape(&edits)
---
insert Sense into Sign at End
insert SenseEdge into Sign at End
