crates/changeset/tests/snapshots/atomic_rewrite_goldens__drift.snap
---
source: crates/changeset/tests/atomic_rewrite_goldens.rs
expression: shape(&edits)
---
update Sense.gloss
