crates/changeset/tests/snapshots/atomic_rewrite_goldens__lexicalize_sense.snap
---
source: crates/changeset/tests/atomic_rewrite_goldens.rs
expression: shape(&edits)
---
update SenseEdge.transparency
