crates/changeset/tests/snapshots/atomic_rewrite_goldens__merge.snap
---
source: crates/changeset/tests/atomic_rewrite_goldens.rs
expression: shape(&edits)
---
move Sense to Sign at End
delete Sign
