crates/changeset/tests/snapshots/atomic_rewrite_goldens__reanalyze_insert.snap
---
source: crates/changeset/tests/atomic_rewrite_goldens.rs
expression: shape(&edits)
---
insert Definition into Sign at End
