crates/changeset/tests/snapshots/atomic_rewrite_goldens__reanalyze_update.snap
---
source: crates/changeset/tests/atomic_rewrite_goldens.rs
expression: shape(&edits)
---
update Definition.value
