crates/changeset/tests/snapshots/atomic_rewrite_goldens__sound_change.snap
---
source: crates/changeset/tests/atomic_rewrite_goldens.rs
expression: shape(&edits)
---
insert Rule into Block at End
