crates/changeset/tests/snapshots/atomic_rewrite_goldens__split.snap
---
source: crates/changeset/tests/atomic_rewrite_goldens.rs
expression: shape(&edits)
---
insert Sign into Language at End
delete Sense
